--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         <div class="footer">
             <div class="left">
                 <h4>2024 &copy;</h4>
-                <h4 class="footer-name">MOHAMMAD ASIF KHAN</h4>
+                <h4 id="time"></h4>
+                <!-- <h4 class="footer-name">MOHAMMAD ASIF KHAN</h4> -->
             </div>
             <div class="right">
                 <h4><a target="_blank" href="https://github.com/asif-khan-2k19">GITHUB<span class="underline"></span></a></h4>
